--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,49 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.App {
+  background-color: whitesmoke;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#nav-bar {
+  background-color: #5fff33;
+}
+
+#footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #5fff33;
+  padding: 20px;
+  text-align: center;
+}
+
+/* Logo.css */
+.outer-circle {
+  display: inline-block;
+  width: 100px; /* Adjust size as needed */
+  height: 100px; /* Adjust size as needed */
+  border-radius: 50%; /* Makes it a circle */
+  background-color: #5fff33; /* Outer circle color */
+  position: relative; /* Positioning for inner circle */
+  justify-content: center;
+  align-items: center;
+}
+
+.inner-circle {
+  display: inline-block;
+  width: 60px; /* Adjust size as needed */
+  height: 60px; /* Adjust size as needed */
+  border-radius: 50%; /* Makes it a circle */
+  background-color: whitesmoke; /* Inner circle color */
+  position: absolute; /* Positioning within outer circle */
+  top: 50%; /* Centers the inner circle vertically */
+  left: 50%; /* Centers the inner circle horizontally */
+  transform: translate(-50%, -50%); /* Adjusts position to center */
 }
