--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ code {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #5fff33;
+  background-color: #003f85;
   padding: 20px;
   text-align: center;
 }
