Created another card. Need to fix styling issues

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,12 @@ code {
   text-align: center;
 }
 
+.home-page-card {
+  text-align: center;
+  width: 33%;
+  
+}
+
 #nav-bar {
   background-color: #5fff33;
 }
