--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* 
+
 .App {
-  background-color: whitesmoke;
-} */
+  display: flex; 
+  flex-direction: column;
+  min-height: 100vh;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -31,12 +33,10 @@ code {
 }
 
 #footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
   background-color: #003f85;
   padding: 20px;
   text-align: center;
+  margin-top: auto; 
 }
 
 /* Logo css */
