--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ code {
 }
 
 #nav-bar {
-  background-color: #5fff33;
+  background-color: #0ced77;
 }
 
 #footer {
@@ -53,38 +53,8 @@ code {
   align-items: center; /* Center vertically */
 }
 
-.outer-circle {
-  display: flex; /* Use flexbox for inner elements */
-  flex-direction: column; /* Stack text vertically */
-  align-items: center; /* Center text horizontally */
-  justify-content: center; /* Center text vertically */
-  width: 150px; /* Adjust as needed */
-  height: 150px; /* Adjust as needed */
-  border-radius: 50%; /* Makes it a circle */
-  background-color: #5fff33; /* Outer circle color */
-  position: relative; /* For absolute positioning of inner circle */
+.logo {
+  height: 250px; 
+  width: auto;
 }
 
-.inner-circle {
-  display: inline-block;
-  width: 80px; /* Adjust size as needed */
-  height: 80px; /* Adjust size as needed */
-  border-radius: 50%; /* Makes it a circle */
-  background-color: whitesmoke; /* Inner circle color */
-  position: absolute; /* Positioning within outer circle */
-  top: 50%; /* Centers the inner circle vertically */
-  left: 50%; /* Centers the inner circle horizontally */
-  transform: translate(-50%, -50%); /* Adjusts position to center */
-}
-
-.text-container {
-  position: relative; /* To position text properly */
-  z-index: 1; /* Ensure text is above the inner circle */
-  text-align: center; /* Center text */
-  color: black; /* Text color */
-}
-
-.neighbors-word, .lawn-service-word {
-  margin: 0; /* Remove default margin */
-  font-size: 14px; /* Adjust font size as needed */
-}
