--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@ code {
   display: flex;
   justify-content: center; /* Center the logo on the page */
   align-items: center; /* Center vertically */
+  height: 30vh;
 }
 
 .logo {
