Made MessageCard component&editted homePage

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ code {
 .home-page-card {
   text-align: center;
   width: 100%;
-  margin: 20px 20px;
+  margin: auto;
   padding: 20px 20px;
 }
 
