Update css for message cards

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ code {
   text-align: center;
 }
 
-.home-page-card {
+.message-cards-col {
   text-align: center;
   width: 100%;
   margin: auto;
