--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,18 @@ code {
   padding: 30px; 
 }
 
+.marketing-section {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center;     /* Center vertically */
+  height: 200vh;          /* Full height of the viewport */
+}
+
+.marketing-section img {
+  max-width: 100%;  /* Ensures the image doesn't exceed the width of its container */
+  height: auto;     /* Maintains the aspect ratio of the image */
+}
+
 /* Pages CSS */
 
 .services-page, .about-page, .contact-page {
